[package]
authors       = ["Billy Chan <ccw.billy.123@gmail.com>"]
categories    = ["database"]
description   = "Derive macros for SeaORM"
documentation = "https://docs.rs/sea-orm"
edition       = "2024"
homepage      = "https://www.sea-ql.org/SeaORM"
keywords      = ["async", "orm", "mysql", "postgres", "sqlite"]
license       = "MIT OR Apache-2.0"
name          = "sea-orm-macros"
repository    = "https://github.com/SeaQL/sea-orm"
rust-version  = "1.85.0"
version       = "2.0.0-rc.30"

[lib]
name       = "sea_orm_macros"
path       = "src/lib.rs"
proc-macro = true

[dependencies]
bae = { version = "0.2", package = "sea-bae", default-features = false, optional = true }
heck = { version = "0.5", default-features = false }
itertools = "0.14"
pluralizer = { version = "0.5" }
proc-macro-crate = { version = "3.2.0", optional = true }
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }
syn = { version = "2", default-features = false, features = [
    "parsing",
    "proc-macro",
    "derive",
    "printing",
] }
unicode-ident = { version = "1" }

[dev-dependencies]
sea-orm = { path = "../", default-features = false, features = [
    "macros",
    "tests-cfg",
] }
serde = { version = "1.0", features = ["derive"] }

[features]
async           = []
default         = ["derive"]
derive          = ["bae"]
entity-registry = []
postgres-array  = []
seaography      = ["proc-macro-crate"]
strum           = []
with-json       = []
