[workspace]
# A separate workspace

[package]
authors       = ["Billy Chan <ccw.billy.123@gmail.com>"]
categories    = ["database"]
description   = "Migration utility for SeaORM"
documentation = "https://docs.rs/sea-orm"
edition       = "2024"
homepage      = "https://www.sea-ql.org/SeaORM"
keywords      = ["async", "orm", "mysql", "postgres", "sqlite"]
license       = "MIT OR Apache-2.0"
name          = "sea-orm-migration"
repository    = "https://github.com/SeaQL/sea-orm"
rust-version  = "1.85.0"
version       = "2.0.0-rc.30"

[lib]
name = "sea_orm_migration"
path = "src/lib.rs"

[dependencies]
async-trait = { version = "0.1", default-features = false }
clap = { version = "4.3", features = ["env", "derive"], optional = true }
dotenvy = { version = "0.15", default-features = false, optional = true }
sea-orm = { version = "~2.0.0-rc.30", path = "../", features = [
    "schema-sync",
] }
sea-orm-cli = { version = "~2.0.0-rc.30", path = "../sea-orm-cli", default-features = false, optional = true }
sea-schema = { version = "0.17.0-rc", default-features = false, features = [
    "discovery",
    "writer",
    "probe",
] }
tracing = { version = "0.1", default-features = false, features = ["log"] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
    "env-filter",
    "fmt",
] }

[dev-dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }

[features]
cli = ["clap", "dotenvy", "sea-orm-cli/cli"]
default = ["cli"]
entity-registry = ["sea-orm/entity-registry"]
runtime-async-std = [
    "sea-orm/runtime-async-std",
    "sea-schema/runtime-async-std",
    "sea-orm-cli?/runtime-async-std",
]
runtime-async-std-native-tls = [
    "sea-orm/runtime-async-std-native-tls",
    "sea-schema/runtime-async-std-native-tls",
    "sea-orm-cli?/runtime-async-std-native-tls",
]
runtime-async-std-rustls = [
    "sea-orm/runtime-async-std-rustls",
    "sea-schema/runtime-async-std-rustls",
    "sea-orm-cli?/runtime-async-std-rustls",
]
runtime-tokio = [
    "sea-orm/runtime-tokio",
    "sea-schema/runtime-tokio",
    "sea-orm-cli?/runtime-tokio",
]
runtime-tokio-native-tls = [
    "sea-orm/runtime-tokio-native-tls",
    "sea-schema/runtime-tokio-native-tls",
    "sea-orm-cli?/runtime-tokio-native-tls",
]
runtime-tokio-rustls = [
    "sea-orm/runtime-tokio-rustls",
    "sea-schema/runtime-tokio-rustls",
    "sea-orm-cli?/runtime-tokio-rustls",
]
sqlite-use-returning-for-3_35 = ["sea-orm/sqlite-use-returning-for-3_35"]
sqlx-all = ["sqlx-mysql", "sqlx-postgres", "sqlx-sqlite"]
sqlx-dep = []
sqlx-mysql = ["sqlx-dep", "sea-orm/sqlx-mysql", "sea-orm-cli?/sqlx-mysql"]
sqlx-postgres = [
    "sqlx-dep",
    "sea-orm/sqlx-postgres",
    "sea-orm-cli?/sqlx-postgres",
]
sqlx-sqlite = ["sqlx-dep", "sea-orm/sqlx-sqlite", "sea-orm-cli?/sqlx-sqlite"]
with-bigdecimal = ["sea-orm/with-bigdecimal"]
with-chrono = ["sea-orm/with-chrono"]
with-ipnetwork = ["sea-orm/with-ipnetwork"]
with-json = ["sea-orm/with-json"]
with-rust_decimal = ["sea-orm/with-rust_decimal"]
with-time = ["sea-orm/with-time"]
with-uuid = ["sea-orm/with-uuid"]

[patch.crates-io]
# sea-query = { path = "../sea-query" }
