[workspace]
members = [".", "examples/quickstart", "examples/pi_spigot"]

[package]
authors       = ["Chris Tsang <chris.2y3@outlook.com>"]
categories    = ["database"]
description   = "🐚 The sync version of SeaORM"
documentation = "https://docs.rs/sea-orm"
edition       = "2024"
homepage      = "https://www.sea-ql.org/SeaORM"
keywords      = ["orm", "mysql", "postgres", "sqlite"]
license       = "MIT OR Apache-2.0"
name          = "sea-orm-sync"
repository    = "https://github.com/SeaQL/sea-orm"
rust-version  = "1.85.0"
version       = "2.0.0-rc.30"

[package.metadata.docs.rs]
features = [
    "default",
    "mock",
    "proxy",
    "rbac",
    "schema-sync",
    "postgres-array",
    "postgres-vector",
    "sea-orm-internal",
]
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "sea_orm"
path = "src/lib.rs"

[dependencies]
bigdecimal = { version = "0.4", default-features = false, features = [
    "std",
], optional = true }
chrono = { version = "0.4.30", default-features = false, optional = true }
derive_more = { version = "2", features = ["debug"] }
inventory = { version = "0.3", optional = true }
ipnetwork = { version = "0.20", default-features = false, optional = true }
itertools = "0.14.0"
log = { version = "0.4", default-features = false }
ouroboros = { version = "0.18", default-features = false }
pgvector = { version = "~0.4", default-features = false, optional = true }
rust_decimal = { version = "1", default-features = false, features = [
    "std",
], optional = true }
sea-orm-macros = { version = "~2.0.0-rc.20", path = "../sea-orm-macros", default-features = false, features = [
    "strum",
] }
sea-query = { version = "=1.0.0-rc.28", default-features = false, features = [
    "thread-safe",
    "hashable-value",
    "backend-mysql",
    "backend-postgres",
    "backend-sqlite",
    "sea-orm",
] }
sea-query-rusqlite = { version = "0.8.0-rc.14", optional = true }
sea-schema-sync = { version = "0.17.0-rc.15", default-features = false, features = [
    "sync",
    "discovery",
    "writer",
    "probe",
], optional = true }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false, optional = true }
strum = { version = "0.27", default-features = false }
thiserror = { version = "2", default-features = false }
time = { version = "0.3.36", default-features = false, optional = true }
tracing = { version = "0.1", default-features = false, features = [
    "attributes",
    "log",
] }
url = { version = "2.2", default-features = false }
uuid = { version = "1", default-features = false, optional = true }

[dev-dependencies]
dotenv = "0.15"
maplit = { version = "1" }
pretty_assertions = { version = "0.7" }
sea-orm-sync = { path = ".", features = [
    "mock",
    "debug-print",
    "tests-cfg",
    "postgres-array",
    "with-ipnetwork",
] }
time = { version = "0.3.36", features = ["macros"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[features]
debug-print = []
default = [
    "sync",
    "macros",
    "with-json",
    "with-chrono",
    "with-rust_decimal",
    "with-uuid",
    "with-time",
    "sqlite-use-returning-for-3_35",
]
entity-registry = ["inventory", "sea-orm-macros/entity-registry"]
json-array = [
    "postgres-array",
] # this does not actually enable postgres, but only a few traits to support array in sea-query
macros = ["sea-orm-macros/derive"]
mariadb-use-returning = []
mock = []
postgres-array = [
    "sea-query/postgres-array",
    "sea-orm-macros/postgres-array",
    "sea-query-rusqlite?/postgres-array",
]
postgres-vector = [
    "pgvector",
    "sea-query/postgres-vector",
    "sea-query-rusqlite?/postgres-vector",
]
proxy = ["serde_json", "serde/derive"]
rbac = ["sea-query/audit", "macros"]
rusqlite = ["sea-query-rusqlite/sea-orm", "sea-schema-sync/rusqlite"]
schema-sync = ["sea-schema-sync"]
sea-orm-internal = []
seaography = ["sea-orm-macros/seaography"]
sqlite-no-row-value-before-3_15 = []
sqlite-use-returning-for-3_35 = []
sqlx-dep = []
sqlx-mysql = []
sqlx-postgres = []
sqlx-sqlite = []
sync = []
tests-cfg = ["serde/derive"]
tests-features = ["default", "rbac", "schema-sync", "with-bigdecimal"]
with-bigdecimal = [
    "bigdecimal",
    "sea-query/with-bigdecimal",
    "sea-query-rusqlite?/with-bigdecimal",
]
with-chrono = [
    "chrono",
    "sea-query/with-chrono",
    "sea-query-rusqlite?/with-chrono",
]
with-ipnetwork = [
    "ipnetwork",
    "sea-query/with-ipnetwork",
    "sea-query-rusqlite?/with-ipnetwork",
]
with-json = [
    "serde_json",
    "sea-query/with-json",
    "sea-orm-macros/with-json",
    "chrono?/serde",
    "rust_decimal?/serde",
    "bigdecimal?/serde",
    "uuid?/serde",
    "time?/serde",
    "pgvector?/serde",
    "sea-query-rusqlite?/with-json",
]
with-rust_decimal = [
    "rust_decimal",
    "sea-query/with-rust_decimal",
    "sea-query-rusqlite?/with-rust_decimal",
]
with-time = ["time", "sea-query/with-time", "sea-query-rusqlite?/with-time"]
with-uuid = ["uuid", "sea-query/with-uuid", "sea-query-rusqlite?/with-uuid"]

[patch.crates-io]
# sea-query = { path = "../sea-query" }
