[package]
name = "sea-orm-actix-4-beta-example"
version = "0.1.0"
authors = ["Sam Samai <sam@studio2pi.com.au>"]
edition = "2018"
publish = false

[workspace]

[dependencies]
actix-files = "0.6.0-beta.4"
actix-http = "=3.0.0-beta.5"
actix-rt = "2.2.0"
actix-service = "=2.0.0-beta.5"
actix-web = "=4.0.0-beta.5"

tera = "1.8.0"
dotenv = "0.15"
listenfd = "0.3.3"
serde = "1"
env_logger = "0.8"

[dependencies.sea-orm]
path = "../../" # remove this line in your own project
version = "^0.3.0"
features = ["macros", "runtime-actix-native-tls"]
default-features = false

[features]
default = ["sqlx-mysql"]
sqlx-mysql = ["sea-orm/sqlx-mysql"]
sqlx-postgres = ["sea-orm/sqlx-postgres"]
