[package]
authors      = ["Sam Samai <sam@studio2pi.com.au>"]
edition      = "2024"
name         = "sea-orm-actix-4-beta-example"
publish      = false
rust-version = "1.85.0"
version      = "0.1.0"

[workspace]
members = [".", "api", "entity", "migration"]

[dependencies]
actix-example-api = { path = "api" }