[package]
name = "axum-graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.4.8"
dotenv = "0.15.0"
entity = { path = "entity" }
migration = { path = "migration" }
async-graphql-axum = "3.0.31"
