[package]
authors      = ["Yoshiera Huang <huangjasper@126.com>"]
edition      = "2024"
name         = "sea-orm-axum-example"
publish      = false
rust-version = "1.85.0"
version      = "0.1.0"

[workspace]
members = [".", "api", "entity", "migration"]

[dependencies]
axum-example-api = { path = "api" }
