[workspace]
# A separate workspace

[package]
name = "sea-orm-example-basic"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
publish = false

[dependencies]
tokio = { version = "1", features = ["full"] }
sea-orm = { path = "../../", features = [ "sqlx-mysql", "runtime-tokio-native-tls" ] }
serde_json = { version = "1" }
futures-util = { version = "0.3" }
