[workspace]
# A separate workspace

[package]
edition      = "2024"
name         = "sea-orm-example-basic"
publish      = false
rust-version = "1.85.0"
version      = "0.1.0"

[dependencies]
futures-util = { version = "0.3" }
sea-orm = { path = "../../", features = [
    "sqlx-mysql",
    "runtime-tokio-native-tls",
] }
serde_json = { version = "1" }
tokio = { version = "1", features = ["full"] }