[package]
authors      = ["Sea ORM Contributors"]
edition      = "2024"
name         = "sea-orm-d1-example"
publish      = false
rust-version = "1.85.0"
version      = "0.1.0"

[workspace]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

worker        = { version = "0.7", features = ["d1"] }

sea-orm = { path = "../../", default-features = false, features = [
    "d1",
    "with-json",
    "macros",
]}
