[package]
name = "sea-orm-graphql-example"
authors = ["Aaron Leopold <aaronleopold1221@gmail.com>"]
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "api", "service", "entity", "migration"]

[dependencies]
graphql-example-api = { path = "api" }
