[package]
name = "sea-orm-jsonrpsee-example"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "api", "service", "entity", "migration"]

[dependencies]
jsonrpsee-example-api = { path = "api" }
