[package]
edition      = "2024"
name         = "sea-orm-jsonrpsee-example"
publish      = false
rust-version = "1.85.0"
version      = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "api", "entity", "migration"]

[dependencies]
jsonrpsee-example-api = { path = "api" }

[patch.crates-io]
sea-query = { git = "https://github.com/Huliiiiii/sea-query", branch = "enum" }
sea-query-sqlx = { git = "https://github.com/Huliiiiii/sea-query", branch = "enum" }
