[workspace]

[package]
name = "todolist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

loco-rs = { version = "0.16" }
migration = { path = "migration" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
eyre = "0.6"
tokio = { version = "1", default-features = false }
async-trait = "0.1"
tracing = "0.1"
chrono = "0.4"
validator = { version = "0.20" }
axum = "0.8"
include_dir = "0.7"
uuid = { version = "1", features = ["v4"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dependencies.sea-orm]
path = "../../" # remove this line in your own project
version = "~1.1.17" # sea-orm version
features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls", "macros"]

[[bin]]
name = "todolist-cli"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
serial_test = "3"
rstest = "0.25"
loco-rs = { version = "0.16", features = ["testing"] }
insta = { version = "1", features = ["redactions", "yaml", "filters"] }

[patch.crates-io]
sea-orm = { path = "../../" }
sea-orm-migration = { path = "../../sea-orm-migration" }
