[workspace]

[package]
edition      = "2024"
name         = "todolist"
rust-version = "1.85.0"
version      = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

loco-rs   = { version = "0.16" }
migration = { path = "migration" }

async-trait        = "0.1.74"
axum               = "0.8"
chrono             = "0.4"
eyre               = "0.6"
include_dir        = "0.7"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tokio              = { version = "1.33.0", default-features = false }
tracing            = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
uuid               = { version = "1.6.0", features = ["v4"] }
validator          = { version = "0.20" }

[dependencies.sea-orm]
features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
]
version = "~2.0.0-rc.30" # sea-orm version

[[bin]]
name              = "todolist-cli"
path              = "src/bin/main.rs"
required-features = []

[dev-dependencies]
insta       = { version = "1.34.0", features = ["redactions", "yaml", "filters"] }
loco-rs     = { version = "0.16", features = ["testing"] }
rstest      = "0.18.2"
serial_test = "2.0.0"

[patch.crates-io]
loco-rs = { git = "https://github.com/SeaQL/loco", branch = "master" }
