[workspace]

[package]
edition      = "2024"
name         = "loco_seaography"
rust-version = "1.85.0"
version      = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

loco-rs   = { version = "0.16" }
migration = { path = "migration" }

async-graphql-axum = { version = "7.0" }
async-trait        = "0.1.74"
axum               = { version = "0.8", features = ["multipart"] }
chrono             = "0.4"
eyre               = "0.6"
include_dir        = "0.7"
lazy_static        = { version = "1.4" }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tokio              = { version = "1.33.0", default-features = false }
tokio-util         = "0.7.11"
tower-service      = { version = "0.3" }
tracing            = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
uuid               = { version = "1.6.0", features = ["v4"] }
validator          = { version = "0.20" }

[dependencies.sea-orm]
features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
]
version = "~2.0.0-rc.30" # sea-orm version

[dependencies.seaography]
branch   = "main"
features = ["graphql-playground", "with-decimal", "with-chrono"]
git      = "https://github.com/SeaQL/seaography.git"
version  = "~2.0.0-rc.1"                                         # seaography version

[[bin]]
name              = "loco_seaography-cli"
path              = "src/bin/main.rs"
required-features = []

[dev-dependencies]
insta       = { version = "1.34.0", features = ["redactions", "yaml", "filters"] }
loco-rs     = { version = "0.16", features = ["testing"] }
rstest      = "0.18.2"
serial_test = "2.0.0"

[patch.crates-io]
loco-rs = { git = "https://github.com/SeaQL/loco", branch = "master" }
